--- a/config-dev.yml
+++ b/config-dev.yml
@@ -22,5 +22,4 @@ eureka:
   instance:
     prefer-ip-address: true
     instance-id: ${spring.application.name}:${server.port} 
-label: 
-  release
+label: release
