--- a/config-dev.yml
+++ b/config-dev.yml
@@ -10,11 +10,10 @@ spring:
           uri: https://github.com/fanyong920/spring-cloud.git
           username: fanyong920
           password: f642518286920
-  profiles:
-    include:
-      - test
-      - dev
-      - pro
+          basedir: H:/PPT/basedir
+  profiles: dev
+  version: 1.0
+
 eureka:
   client:
     service-url:
@@ -22,4 +21,3 @@ eureka:
   instance:
     prefer-ip-address: true
     instance-id: ${spring.application.name}:${server.port} 
-label: release
