--- a/config-test.yml
+++ b/config-test.yml
@@ -1,26 +1,12 @@
+version: 1.0
 server:
   port: 8084
-spring:
-  application:
-    name: spring-cloud-config
-  cloud:
-    config:
-      server:
-        git:
-          uri: https://github.com/fanyong920/spring-cloud.git
-          username: fanyong920
-          password: f642518286920
-          basedir: H:/PPT/basedir
-  profiles: 
-    test
- 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-  instance:
-    prefer-ip-address: true
-    instance-id: ${spring.application.name}:${server.port} 
-env:
-  test
+env: test
 version: 1.0
+spring:
+  profiles: 
+    active:
+      - test
+    include:
+      - test
+
